Bug 1888094 - Missing window.event in XHR callbacks, r=edgar

Differential Revision: https://phabricator.services.mozilla.com/D205840